# small-protocol

./: .editorconfig  .gitattributes  .gitignore  .goreleaser.yaml  AGENTS.md  AGENTS_MD_AUDIT.md  CANONICAL_COPY_BLOCKS.md  CHANGELOG.md  CHANGELOG.md   CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DRIFT_REPORT.md  LICENSE  Makefile  PATCH_PLAN.md  README.md  RELEASE.md  SECURITY.md  WHY.md  bun.lockb  go.mod  go.sum  package.json
.github/: FUNDING.yml
.github/workflows/: ci.yml  npm-publish.yml  release-dist.yml  release.yml
.small/: constraints.small.yml  handoff.small.yml  intent.small.yml  plan.small.yml  progress.small.yml  workspace.small.yml
.small-runs/d554777579ce31fefc6297f2e63e977f05f1bde425d7bba4f79203b5b78a7ba3/: meta.json  plan.small.yml  progress.small.yml
data_pages_copy/: SMALL - The Missing Execution Model.md  SMALL Compliance Specification.md  Why Agents Fail Without SMALL - BLOG_ESSAY.md
docker/: docker-compose.yml  orchestrator.Dockerfile
docs/: DEVELOPMENT.md  EXECUTION_MODEL.md  FAQ.md  agent-operating-contract.md  cli-guide.md  cli.md  enterprise.md  getting-started.md  index.mdx  installation.md  invariants.md  philosophy.md  quickstart.md  release-checklist.md  releasing.md
reference/: README.md
scripts/: build-release.sh  bun-types.d.ts  install.sh  sync-schemas.ts  test-install.sh  tsconfig.json  verify.sh
services/orchestrator/: pyproject.toml
services/orchestrator/src/app/: config.py  db.py  lineage.py  main.py  policy.py  routes_artifacts.py  routes_manifests.py  routes_schemas.py  schemas.py  validation.py
(+320 files in other folders)
